# api/api.go
@@ -108,6 +108,7 @@ func (api *API) loadRoutes() {
 		{Path: "/undelegations/volume/agg", Method: http.MethodGet, Func: api.GetAggUndelegationsVolume},
 		{Path: "/network/stats", Method: http.MethodGet, Func: api.GetNetworkStats},
 		{Path: "/staking/pie", Method: http.MethodGet, Func: api.GetStakingPie},
+		{Path: "/proposals", Method: http.MethodGet, Func: api.GetProposals},
 	})
 
 }
